--- a/package.json
+++ b/package.json
@@ -5,11 +5,16 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --watch dev -e js dev/app.js"
+    "node_1": "nodemon --watch dev -e js dev/networkNode.js 5001 http://localhost:5001",
+    "node_2": "nodemon --watch dev -e js dev/networkNode.js 5002 http://localhost:5002",
+    "node_3": "nodemon --watch dev -e js dev/networkNode.js 5003 http://localhost:5003",
+    "node_4": "nodemon --watch dev -e js dev/networkNode.js 5004 http://localhost:5004",
+    "node_5": "nodemon --watch dev -e js dev/networkNode.js 5005 http://localhost:5005"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "sha256": "^0.2.0",
